--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@polkadapt/core": "^1.0.0",
     "@polkadapt/substrate-rpc": "^1.0.0",
     "@polkadot/api": "7.11.1",
+    "buffer": "^6.0.3",
+    "process": "^0.11.10",
     "rxjs": "~7.5.5",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.5"
