--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.3.2",
-    "@angular/cdk": "~13.3.2",
-    "@angular/common": "~13.3.2",
-    "@angular/compiler": "~13.3.2",
-    "@angular/core": "~13.3.2",
-    "@angular/forms": "~13.3.2",
-    "@angular/material": "~13.3.2",
-    "@angular/platform-browser": "~13.3.2",
-    "@angular/platform-browser-dynamic": "~13.3.2",
-    "@angular/router": "~13.3.2",
+    "@angular/animations": "^14.0.3",
+    "@angular/cdk": "^13.3.2",
+    "@angular/common": "^14.0.3",
+    "@angular/compiler": "^14.0.3",
+    "@angular/core": "^14.0.3",
+    "@angular/forms": "^14.0.3",
+    "@angular/material": "^13.3.2",
+    "@angular/platform-browser": "^14.0.3",
+    "@angular/platform-browser-dynamic": "^14.0.3",
+    "@angular/router": "^14.0.3",
     "@polkadapt/core": "^1.0.0",
     "@polkadapt/substrate-rpc": "^1.0.1",
-    "@polkadot/api": "8.3.2",
+    "@polkadot/api": "8.10.1",
     "buffer": "^6.0.3",
     "process": "^0.11.10",
     "rxjs": "~7.5.5",
@@ -31,29 +31,29 @@
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.2",
-    "@angular-eslint/builder": "13.2.0",
-    "@angular-eslint/eslint-plugin": "13.2.0",
-    "@angular-eslint/eslint-plugin-template": "13.2.0",
-    "@angular-eslint/schematics": "13.2.0",
-    "@angular-eslint/template-parser": "13.2.0",
-    "@angular/cli": "~13.3.2",
-    "@angular/compiler-cli": "~13.3.2",
-    "@polkadot/types": "8.3.2",
-    "@types/jasmine": "~3.10.3",
+    "@angular-devkit/build-angular": "^14.0.3",
+    "@angular-eslint/builder": "14.0.0",
+    "@angular-eslint/eslint-plugin": "14.0.0",
+    "@angular-eslint/eslint-plugin-template": "14.0.0",
+    "@angular-eslint/schematics": "14.0.0",
+    "@angular-eslint/template-parser": "14.0.0",
+    "@angular/cli": "^14.0.3",
+    "@angular/compiler-cli": "^14.0.3",
+    "@polkadot/types": "8.10.1",
+    "@types/jasmine": "~4.0.0",
     "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "5.18.0",
-    "@typescript-eslint/parser": "5.18.0",
-    "eslint": "^8.12.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jsdoc": "^37.9.7",
+    "@typescript-eslint/eslint-plugin": "5.30.0",
+    "@typescript-eslint/parser": "5.30.0",
+    "eslint": "^8.18.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.3.3",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "jasmine-core": "~4.0.1",
-    "karma": "~6.3.17",
+    "jasmine-core": "~4.1.0",
+    "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~4.0.1",
+    "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.5.5"
+    "typescript": "~4.7.4"
   }
 }
